Adjusted spacing of reg-count button to fix issues with a long title and cleaned up styling. Made links under event name darker

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -582,15 +582,9 @@ main.dashboard {
       text-transform: uppercase;
       margin: 5px 0 15px;
     }
-    p.reg-count {
-      float: right;
-      display: inline-block;
-      padding: 5px 8px;
+    button.btn-reg-count {
       background: @white;
       .gray;
-      margin-top: -40px;
-      font-size: 12px;
-      border-radius: 3px;
     }
     ul.horizontal li:first-child {
       padding-left: 0;
@@ -609,7 +603,7 @@ main.dashboard {
     li {
       padding-left: 18px;
       a {
-        color: #cdcdcd;
+        color: #666;
         .proxima;
         font-size: 14px;
       }
